@@ -1,6 +1,3 @@
 SUBDIRS = src 
 
-EXTRA_DIST = VERSION redhat/gttlvutil.spec
-
-redhat/gttlvutil.spec: redhat/gttlvutil.spec.in
-	sed 's/@VERSION\@/${VERSION}/g' $< > $@
+EXTRA_DIST = VERSION packaging/redhat/gttlvutil.spec
