@@ -27,7 +27,7 @@ autoreconf -if && \
 make clean && \
 make dist && \
 mkdir -p $BUILD_DIR/{BUILD,RPMS,SOURCES,SPECS,SRPMS,tmp} && \
-cp redhat/gttlvutil.spec $BUILD_DIR/SPECS/ && \
+cp packaging/redhat/gttlvutil.spec $BUILD_DIR/SPECS/ && \
 cp gttlvutil-*.tar.gz $BUILD_DIR/SOURCES/ && \
 rpmbuild -ba $BUILD_DIR/SPECS/gttlvutil.spec && \
 cp $BUILD_DIR/RPMS/*/gttlvutil-*$version*.rpm . && \
